<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recognitionText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RealTimeActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.camera.view.PreviewView>

    <ImageView
        android:id="@+id/flashlight2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_outline_flash_on_24"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/previewView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/resultImage2"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                app:srcCompat="@drawable/vision"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/resultValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:fontFamily="@font/product"
                android:text="@string/result"
                android:textColor="@color/black"
                android:textSize="34sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/product"
                android:text="@string/hot_dog"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/value1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/product"
                android:text="@string/_0_0"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/product"
                android:text="@string/not_hot_dog"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/value2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/product"
                android:text="@string/_0_0"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/product"
                android:text="@string/dog"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/value3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:layout_weight="1"
                android:fontFamily="@font/product"
                android:text="@string/_0_0"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>